[package]
name = "rewrite_backend_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
rand = "0.8.5"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tide = "0.16"
async-tungstenite = "0.15"
tide-websockets = "0.4.0"
log = "0.4.8"
femme = "1.3.0"
reqwest = "0.11.18"
surf = "2.3.2"
serde_json = "1.0.99"
uuid = "1.3.4"
sha2 = "0.10.7"
base64 = "0.21.2"
bytes = "1.4.0"
